--- a/src/09-POO_2.md
+++ b/src/09-POO_2.md
@@ -1,5 +1,5 @@
-![Banner](https://github.com/AleMorales9011/ForgeWare/blob/362a669ad3bbd7795a40d70e3cc18db09c065286/src/images/futurism-perspective-digital-nomads-lifestyle%20(2).jpg)
-# POO with Java 2 
+![Banner](images/futurism-perspective-digital-nomads-lifestyle%20(2).jpg)
+# POO with Java II 
 
 1 hour
 
