--- a/src/09-POO_2.md
+++ b/src/09-POO_2.md
@@ -238,7 +238,8 @@ for (initialization; condition; increment/decrement) {
 
 Packages provide a `logical way` to group related classes, while directories on your disk reflect this structure.
 
-```ruby
+```java
+
 com
   - yourcompany.ecommerce
     - model
@@ -258,7 +259,7 @@ com
 
 Map directly to the package structure on disk. A package named `com.example.myapp` would have a corresponding directory structure like `com/example/myapp`. Each directory can contain Java source files (.java) and potentially subdirectories for sub-packages.
 
-```ruby
+```java
 
 src
   - com
