--- a/src/010-POO_3.md
+++ b/src/010-POO_3.md
@@ -6,3 +6,33 @@
 # Pass Arguments Via Command Line
 
 In Java, you can pass and access arguments passed via the command line through the `String[] args` parameter in the main method of your program. 
+
+```java
+
+public class ArgumentExample {
+
+  public static void main(String[] args) {
+    // Access command-line arguments here
+    System.out.println("Number of arguments: " + args.length);
+    for (int i = 0; i < args.length; i++) {
+      System.out.println("Argument " + i + ": " + args[i]);
+    }
+  }
+}
+```
+
+# Running the Programm via CLI
+
+```ruby
+java ArgumentExample This is a string argument! Another argument
+```
+
+# Output
+```ruby
+Number of arguments: 3
+Argument 0: This
+Argument 1: is
+Argument 2: a string argument! Another argument
+```
+
+
