--- a/src/010-POO_3.md
+++ b/src/010-POO_3.md
@@ -34,5 +34,25 @@ Argument 0: This
 Argument 1: is
 Argument 2: a string argument! Another argument
 ```
+# Java directories structure
+
+```java
+
+project_name/
+  README.md         # Project description and instructions
+  LICENSE           # License file
+  src/              # Source code directory
+    main/
+      java/          # Java source code goes here, organized by package
+        com/
+          example/
+            ... your project's java classes ...
+      resources/     # Resource files (images, configuration files, etc.)
+  test/              # Unit test source code (if applicable)
+    java/            # Similar structure for test code packages
+  pom.xml            # Project configuration file (for Maven projects)
+  build.gradle       # Project configuration file (for Gradle projects)
+
+```
 
 
