--- a/src/010-POO_3.md
+++ b/src/010-POO_3.md
@@ -36,8 +36,7 @@ Argument 2: a string argument! Another argument
 ```
 # Java directories structure
 
-```java
-
+```ruby
 project_name/
   README.md         # Project description and instructions
   LICENSE           # License file
