--- a/src/010-POO_3.md
+++ b/src/010-POO_3.md
@@ -53,5 +53,15 @@ project_name/
   build.gradle       # Project configuration file (for Gradle projects)
 
 ```
+# Processing User Input with `Scanner`
+
+The Scanner class in Java provides a convenient way to read user input from the console. 
+
+```java
+
+
+
+```
+
 
 
