--- a/src/010-POO_3.md
+++ b/src/010-POO_3.md
@@ -55,13 +55,51 @@ project_name/
 ```
 # Processing User Input with `Scanner`
 
-The Scanner class in Java provides a convenient way to read user input from the console. 
+The Scanner class in Java provides a convenient way to read user input from the console. Here's a practical example that demonstrates using the Scanner class to calculate the area of a rectangle based on user-provided width and height.
 
 ```java
+import java.util.Scanner;
 
+public class RectangleArea {
 
+  public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
 
+    System.out.print("Enter the width of the rectangle: ");
+    double width = scanner.nextDouble(); // Read width as a double
+
+    System.out.print("Enter the height of the rectangle: ");
+    double height = scanner.nextDouble(); // Read height as a double
+
+    // Calculate and display the area
+    double area = width * height;
+    System.out.println("The area of the rectangle is: " + area);
+
+    scanner.close(); // Close the scanner (optional but good practice)
+  }
+}
 ```
 
+# Exeption Handling
+
+
+Exception handling in Java is a powerful mechanism for managing errors that occur during program execution. It allows you to write robust and reliable code by gracefully handling unexpected situations.
+
+```java
+public class ExceptionExample {
+
+  public static void main(String[] args) {
+    int[] numbers = {1, 2, 3};
+
+    try {
+      System.out.println(numbers[10]); // This will cause an IndexOutOfBoundsException
+    } catch (IndexOutOfBoundsException e) {
+      System.out.println("Array index out of bounds: " + e.getMessage());
+    } finally {
+      System.out.println("This code will always execute.");
+    }
+  }
+}
+```
 
 
