--- a/src/010-POO_3.md
+++ b/src/010-POO_3.md
@@ -102,4 +102,64 @@ public class ExceptionExample {
 }
 ```
 
+# Assertions 
 
+Assertions in Java are a debugging technique used to `verify assumptions` made about your program's state at specific points in the code.  An `assertion` is a statement that you believe to be true during program execution. If the assertion evaluates to false, the program throws an `AssertionError`.
+
+```java
+
+public class Factorial {
+
+  public static long calculateFactorial(int n) {
+    // Assertion for non-negative input
+    assert n >= 0 : "Factorial is only defined for non-negative numbers";
+
+    long result = 1;
+    for (int i = 2; i <= n; i++) {
+      result *= i;
+    }
+    return result;
+  }
+
+  public static void main(String[] args) {
+    // Valid input
+    long result = calculateFactorial(5);
+    System.out.println("5! = " + result); // Output: 5! = 120
+
+    // Invalid input (negative number) - throws AssertionError
+    try {
+      calculateFactorial(-2);
+    } catch (AssertionError e) {
+      System.out.println(e.getMessage()); // Output: Factorial is only defined for non-negative numbers
+    }
+  }
+}
+
+```
+
+# Astract classes
+
+Abstract classes cannot be instantiated directly. They serve as a base class to define a common structure and behavior for subclasses.
+
+```java
+public abstract class Shape {
+  public abstract double calculateArea(); // Abstract method
+  public void printInfo() {
+    System.out.println("This is a shape.");
+  } // Concrete method with implementation
+}
+
+public class Circle extends Shape {
+  private double radius;
+
+  public Circle(double radius) {
+    this.radius = radius;
+  }
+
+  @Override
+  public double calculateArea() {
+    return Math.PI * radius * radius;
+  }
+}
+
+```
