--- a/src/10-POO_3.md
+++ b/src/10-POO_3.md
@@ -137,7 +137,7 @@ public class Factorial {
 
 ```
 
-# Astract classes
+# Abstract classes
 
 Abstract classes cannot be instantiated directly. They serve as a base class to define a common structure and behavior for subclasses.
 
@@ -161,5 +161,57 @@ public class Circle extends Shape {
     return Math.PI * radius * radius;
   }
 }
+
+```
+# Javadoc
+
+Javadoc comments act as self-documenting code, and the generated HTML documentation serves as a reference for programmers using your code. Javadoc generates HTML documentation typically consisting of web pages. These pages explain the classes, methods, and fields in your code, making it easier for programmers to understand how to use your code.
+
+```java
+/**
+ * This class represents a simple calculator.
+ * 
+ * @author Your Name Here
+ */
+public class Calculator {
+
+  /**
+   * Adds two numbers together.
+   * 
+   * @param num1 the first number
+   * @param num2 the second number
+   * @return the sum of num1 and num2
+   */
+  public int add(int num1, int num2) {
+    return num1 + num2;
+  }
+}
+
+```
+
+# For Each Loop
+
+ The `for each` loop is a concise way to iterate over elements in an array or collection. It provides a simpler syntax compared to traditional `for loops`. Here's its syntax.
+
+```java
+
+for (dataType element : array/collection) {
+  // Code to be executed for each element
+}
+```
+# For Each vs For Loop
+
+
+```java
+// For each loop
+int[] numbers = {1, 2, 3, 4, 5};
+
+for (int number : numbers) {
+  System.out.println(number);
+}
+```
+
+```java
+
 
 ```
