--- a/src/10-POO_3.md
+++ b/src/10-POO_3.md
@@ -212,6 +212,36 @@ for (int number : numbers) {
 ```
 
 ```java
+int[] numbers = {1,2,3,4,5};
+for (int i = 0; i < numbers.length; i++) {
+  System.out.println(numbers[i]);
+}
+```
 
+# Enum
+
+An enum in Java is a special data type that allows you to define a set of named constants. These constants are like fixed values representing a specific option within a category. They are commonly used to represent fixed values, like days of the week (MONDAY, TUESDAY, WEDNESDAY) or compass directions (NORTH, SOUTH, EAST, WEST).
+
+```java
+public enum Day {
+  MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY
+}
+
+Day today = Day.FRIDAY;
+
+if (today == Day.WEEKEND) {
+  System.out.println("Time to relax!");
+}
 
 ```
+# Comparable vs Runnable vs Serializable
+
+| Feature        |	Comparable       |	Runnable           	          | Serializable                  |
+|----------------|-------------------|--------------------------------|-------------------------------| 
+| Purpose        | Ordering objects  |  Defining a thread task        | Object persistence            |
+| Methods        | `compareTo`       |  `run`                         | `(none - marker interface)`   |
+| Return Value   | `int`             |  `void`                        |  non-applicable               |
+| Use Case       | Sorting           |  comparisons, multithreading   |  Saving/loading object state  |
+
+   
+
