--- a/src/10-POO_3.md
+++ b/src/10-POO_3.md
@@ -211,6 +211,8 @@ for (int number : numbers) {
 }
 ```
 
+# For Loop
+
 ```java
 int[] numbers = {1,2,3,4,5};
 for (int i = 0; i < numbers.length; i++) {
@@ -243,5 +245,51 @@ if (today == Day.WEEKEND) {
 | Return Value   | `int`             |  `void`                        |  non-applicable               |
 | Use Case       | Sorting           |  comparisons, multithreading   |  Saving/loading object state  |
 
-   
+# Comparable
+Defines object ordering for sorting and comparisons.
+
+```java
+public class Student implements Comparable<Student> {
+  int id;
+  String name;
+  int age;
+
+  // Constructor and other fields...
+
+  @Override
+  public int compareTo(Student other) {
+    return this.age - other.age; // Sort by age in ascending order
+  }
+}
+
+```
+In this example, the `compareTo` method compares the age of the current object `(this)` with another Student object `(other)`. It returns a negative integer if the current object is younger, zero if they have the same age, and a positive integer if the current object is older.
+
+# Runnable
+
+Enables multithreading for concurrent task execution.
+
+```java
+
+public class DownloadTask implements Runnable {
+  String url;
+  String filename;
+
+  public DownloadTask(String url, String filename) {
+    this.url = url;
+    this.filename = filename;
+  }
+
+  @Override
+  public void run() {
+    // Download logic using URL and filename
+    System.out.println("Downloaded: " + filename);
+  }
+}
+```
+This DownloadTask implements Runnable and defines the run method. This method contains the code to download the file from the specified URL and save it with the given filename.
+
+# Serializable
+
+Allows object persistence for data storage and sharing.   
 
