--- a/src/10-POO_3.md
+++ b/src/10-POO_3.md
@@ -82,8 +82,7 @@ public class RectangleArea {
 
 # Exeption Handling
 
-
-Exception handling in Java is a powerful mechanism for managing errors that occur during program execution. It allows you to write robust and reliable code by gracefully handling unexpected situations.
+Exception handling in Java is a `powerful mechanism` for managing errors that occur during program execution.
 
 ```java
 public class ExceptionExample {
@@ -104,7 +103,7 @@ public class ExceptionExample {
 
 # Assertions 
 
-Assertions in Java are a debugging technique used to `verify assumptions` made about your program's state at specific points in the code.  An `assertion` is a statement that you believe to be true during program execution. If the assertion evaluates to false, the program throws an `AssertionError`.
+An `assertion` is a statement that you believe to be true during program execution. If the assertion evaluates to false, the program throws an `AssertionError`.
 
 ```java
 
@@ -139,7 +138,7 @@ public class Factorial {
 
 # Abstract classes
 
-Abstract classes cannot be instantiated directly. They serve as a base class to define a common structure and behavior for subclasses.
+Abstract classes cannot be instantiated directly. They serve as a base class to define a `common structure` and behavior for subclasses.
 
 ```java
 public abstract class Shape {
@@ -165,7 +164,7 @@ public class Circle extends Shape {
 ```
 # Javadoc
 
-Javadoc comments act as self-documenting code, and the generated HTML documentation serves as a reference for programmers using your code. Javadoc generates HTML documentation typically consisting of web pages. These pages explain the classes, methods, and fields in your code, making it easier for programmers to understand how to use your code.
+Javadoc generates HTML documentation. These pages explain the `classes`, `methods`, and `fields` in your code.
 
 ```java
 /**
@@ -191,7 +190,7 @@ public class Calculator {
 
 # For Each Loop
 
- The `for each` loop is a concise way to iterate over elements in an array or collection. It provides a simpler syntax compared to traditional `for loops`. Here's its syntax.
+A simpler loop syntax compared to traditional `for loops`. 
 
 ```java
 
@@ -222,7 +221,9 @@ for (int i = 0; i < numbers.length; i++) {
 
 # Enum
 
-An enum in Java is a special data type that allows you to define a set of named constants. These constants are like fixed values representing a specific option within a category. They are commonly used to represent fixed values, like days of the week (MONDAY, TUESDAY, WEDNESDAY) or compass directions (NORTH, SOUTH, EAST, WEST).
+An enum in Java is a `special data type` that allows you to define a set of named constants. 
+
+They are commonly used to represent fixed values, like days of the week (`MONDAY`, `TUESDAY`, `WEDNESDAY`) or compass directions (`NORTH`, `SOUTH`, `EAST`, `WEST`).
 
 ```java
 public enum Day {
