--- a/src/10-POO_3.md
+++ b/src/10-POO_3.md
@@ -237,7 +237,7 @@ if (today == Day.WEEKEND) {
 }
 
 ```
-# Comparable vs Runnable vs Serializable
+# Comparable vs Runnable vs Serializable Interfaces
 
 | Feature        |	Comparable       |	Runnable           	          | Serializable                  |
 |----------------|-------------------|--------------------------------|-------------------------------| 
@@ -288,9 +288,26 @@ public class DownloadTask implements Runnable {
   }
 }
 ```
-This DownloadTask implements Runnable and defines the run method. This method contains the code to download the file from the specified URL and save it with the given filename.
+This `DownloadTask` implements `Runnable` and defines the run method. This method contains the code to download the file from the specified `URL` and save it with the given `filename`.
 
 # Serializable
 
-Allows object persistence for data storage and sharing.   
+Allows object persistence for data storage and sharing especially via network.
+
+```java
+public class Person implements Serializable {
+  private String name;
+  private int age;
+
+  // Getters and setters omitted for brevity
+}
+```
+With this implementation, you can create `Person` objects and serialize them to files or transmit them over networks using streams.
+
+
+
+
+
+
+
 
