--- a/src/10-POO_3.md
+++ b/src/10-POO_3.md
@@ -103,7 +103,15 @@ public class ExceptionExample {
 
 # Assertions 
 
-An `assertion` is a statement that you believe to be true during program execution. If the assertion evaluates to false, the program throws an `AssertionError`.
+An `assertion` is a statement you believe true during program execution. If the assertion evaluates to false, the program throws an `AssertionError`.
+
+Syntax Example:
+
+```java
+int age = 20;
+assert age >= 18 : "Person must be an adult";
+```
+Example:
 
 ```java
 
@@ -303,6 +311,10 @@ public class Person implements Serializable {
 }
 ```
 With this implementation, you can create `Person` objects and serialize them to files or transmit them over networks using streams.
+
+# Next 
+
+We will discuss vectors, arrays and strings, relational and non-relational databases with Java and Threads.
 
 
 
