--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -1,1 +1,15 @@
+![Banner](images/medium-shot-woman-living-as-digital-nomad.jpg)
 # POO IV
+
+2 hours
+
+# Vectors 
+
+Vectors are like expandable arrays. They can grow or shrink in size based on the elements you add or remove.
+
+| Operation	   | Description	                                     | Example (assuming double elements)     |
+|--------------|---------------------------------------------------|----------------------------------------|
+| Declaration  | Creates a vector object with an initial capacity. | double[] myVector = new double[10];    |
+Space Allocation	Reserves memory for the specified number of elements.	This happens automatically during declaration.
+Access to a Vector Position	Retrieves the element at a specific index.	double value = myVector[3];
+Size Access	Gets the current number of elements in the vector.	int vectorSize = myVector.length;
