--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -7,9 +7,20 @@
 
 Vectors are like expandable arrays. They can grow or shrink in size based on the elements you add or remove.
 
-| Operation	   | Description	                                     | Example (assuming double elements)     |
-|--------------|---------------------------------------------------|----------------------------------------|
-| Declaration  | Creates a vector object with an initial capacity. | double[] myVector = new double[10];    |
-Space Allocation	Reserves memory for the specified number of elements.	This happens automatically during declaration.
-Access to a Vector Position	Retrieves the element at a specific index.	double value = myVector[3];
-Size Access	Gets the current number of elements in the vector.	int vectorSize = myVector.length;
+| Operation	                      | Example                                |
+|---------------------------------|----------------------------------------|
+| Declaration                     | double myVector[];                     |
+| Space allocation                | myVector = new double [10];            |
+| Declaration + Allocation        | double myVector[] = new double [10];   |
+| Position Access                 | myVector[3];                           |
+| Value atribution to a position  | myVector[3] = 10;                      |
+| Vector size                     | myVector.lenght                        |
+
+| Vector Type    | Example                      |
+|----------------|------------------------------|
+| Int            | int vet[] = {1,3,4,6}        |
+| Real           | double vet[] = {2.0,4.4,6.7} |
+| Character      | char vet[] = {'a','e','i'}   |
+
+
+
