--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -5,13 +5,13 @@
 
 # Vectors 
 
-Vectors are like expandable arrays. They can grow or shrink in size based on the elements you add or remove.
+Vectors are like unidimensional expandable arrays. They can grow or shrink in size based on the elements you add or remove.
 
 | Operation	                      | Example                                |
 |---------------------------------|----------------------------------------|
 | Declaration                     | double myVector[];                     |
 | Space allocation                | myVector = new double [10];            |
-| Declaration + Allocation        | double myVector[] = new double [10];   |
+| Declaration + allocation        | double myVector[] = new double [10];   |
 | Position Access                 | myVector[3];                           |
 | Value atribution to a position  | myVector[3] = 10;                      |
 | Vector size                     | myVector.lenght                        |
@@ -21,6 +21,23 @@ Vectors are like expandable arrays. They can grow or shrink in size based on the
 | Int            | int vet[] = {1,3,4,6}        |
 | Real           | double vet[] = {2.0,4.4,6.7} |
 | Character      | char vet[] = {'a','e','i'}   |
+
+# Matrix
+
+A matrix is an array that arranges data into rows and columns.
+
+| Operation                       | Example                        |
+|---------------------------------|--------------------------------|
+| Declaration                     | int myMat[][];                 |
+| Space allocation                | myMat[][] = new int[][];       |
+| Declaration + allocation        | int myMat[][] = new int[][];   |
+| Position Access                 | myMat[3][5];                   |
+| Value atribution to a position  | myMat[3][5] = 10;              |
+| Matrix size                     | myMat.lenght                   |
+| Column number                   | myMat[I].lenght                |
+
+
+
 
 
 
