--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -22,6 +22,32 @@ Vectors are like unidimensional expandable arrays. They can grow or shrink in si
 | Real           | double vet[] = {2.0,4.4,6.7} |
 | Character      | char vet[] = {'a','e','i'}   |
 
+```java
+import java.util.Vector;
+
+public class VectorExample {
+
+  public static void main(String[] args) {
+
+    // Create a Vector of Strings
+    Vector<String> fruits = new Vector<String>();
+
+    // Add elements to the Vector
+    fruits.add("Apple");
+    fruits.add("Banana");
+    fruits.add("Orange");
+
+    // Print the Vector elements
+    System.out.println("Fruits: " + fruits);
+
+    // Iterate through the Vector elements using a loop
+    for (int i = 0; i < fruits.size(); i++) {
+      System.out.println(fruits.get(i));
+    }
+  }
+}
+```
+
 # Matrix
 
 A matrix is an array that arranges data into rows and columns.
@@ -34,10 +60,40 @@ A matrix is an array that arranges data into rows and columns.
 | Position Access                 | myMat[3][5];                   |
 | Value atribution to a position  | myMat[3][5] = 10;              |
 | Matrix size                     | myMat.lenght                   |
-| Column number                   | myMat[I].lenght                |
+| Column number                   | myMat[i].lenght                |
 
 
+```java
+public class MatrixExample {
 
+  public static void main(String[] args) {
+
+    // Define the number of rows and columns
+    int rows = 3;
+    int cols = 2;
+
+    // Create a 2D array to represent the matrix
+    int[][] matrix = new int[rows][cols];
+
+    // Initialize the matrix elements (example)
+    for (int i = 0; i < rows; i++) {
+      for (int j = 0; j < cols; j++) {
+        matrix[i][j] = i * cols + j; // Sample initialization
+      }
+    }
+
+    // Print the matrix elements
+    for (int i = 0; i < rows; i++) {
+      for (int j = 0; j < cols; j++) {
+        System.out.print(matrix[i][j] + " ");
+      }
+      System.out.println(); // Move to next line after each row
+    }
+  }
+}
+```
+
+# Strings
 
 
 
