--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -95,5 +95,23 @@ public class MatrixExample {
 
 # Strings
 
+`Strings` are objects of the `String class`, which provides functionality for working with text data. They are immutable, which means that once created they cannot be changed. To change them we must use the string manipulation classes `String Buffer` and `String Builder`. 
+
+`String Builder` is faster than `String Builder` however it's less `thread-safe` (the ability of a program to handle multiple threads). They use methods such as `append`, `insert`, `delete`, `reverse`, etc.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
