--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -100,7 +100,9 @@ public class MatrixExample {
 `String Builder` is faster than `String Builder` however it's less `thread-safe` (the ability of a program to handle multiple threads). They use methods such as `append`, `insert`, `delete`, `reverse`, etc.
 
 
+# Heap vs String Pool
 
+The heap is the general memory space for all objects in Java, including `String objects` created with new. The `String Pool` (now part of the heap) is a mechanism to reuse `String literals` for memory efficiency. 
 
 
 
