--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -105,6 +105,28 @@ public class MatrixExample {
 The heap is the general memory space for all objects in Java, including `String objects` created with new. The `String Pool` (now part of the heap) is a mechanism to reuse `String literals` for memory efficiency. 
 
 
+# Reading "txt" and "csv" files.
+
+`BufferedReader`: This is a common approach for both TXT and CSV files. It reads the file line by line efficiently. Here's a basic example:
+
+```java
+
+// Replace "filename.txt" with your actual file path
+FileReader reader = new FileReader("filename.txt");
+BufferedReader br = new BufferedReader(reader);
+
+String line;
+while ((line = br.readLine()) != null) {
+  // Process each line here
+  System.out.println(line);
+}
+
+br.close();
+
+```
+
+
+
 
 
 
