--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -102,7 +102,7 @@ public class MatrixExample {
 
 # Heap vs String Pool
 
-The heap is the general memory space for all objects in Java, including `String objects` created with new. The `String Pool` (now part of the heap) is a mechanism to reuse `String literals` for memory efficiency. 
+The heap is the general memory space for all objects in Java, including `String objects` created with new. The `String Pool` (now part of the heap) is a mechanism to reuse `String literals`(fixed text data) for memory efficiency. 
 
 
 # Reading "txt" and "csv" files.
@@ -125,9 +125,82 @@ br.close();
 
 ```
 
+# POO and Databases
 
+POO principles can be used to design the structure of a database. Classes in `POO` can map to tables in a `database`, with object attributes corresponding to table columns. Here's an example demonstrating CRUD operations with `java` and `mysql`.
 
+1. Dependencies: MySQL Connector/J driver
 
+```java
+import java.sql.*;
+
+public class CRUDExample {
+
+    private static final String DB_URL = "jdbc:mysql://localhost:3306/your_database";
+    private static final String USER = "your_username";
+    private static final String PASS = "your_password";
+
+    public static void main(String[] args) {
+
+        // Create connection
+        Connection connection = null;
+        try {
+            Class.forName("com.mysql.cj.jdbc.Driver");
+            connection = DriverManager.getConnection(DB_URL, USER, PASS);
+
+            // **Create Operation (Insert)**
+            String insertSQL = "INSERT INTO your_table (name, email) VALUES (?, ?)";
+            PreparedStatement insertStatement = connection.prepareStatement(insertSQL);
+            insertStatement.setString(1, "John Doe");
+            insertStatement.setString(2, "johndoe@example.com");
+            insertStatement.executeUpdate();
+            System.out.println("Record Inserted!");
+
+            // **Read Operation (Select)**
+            String selectSQL = "SELECT * FROM your_table";
+            Statement selectStatement = connection.createStatement();
+            ResultSet resultSet = selectStatement.executeQuery(selectSQL);
+
+            System.out.println("Existing Records:");
+            while (resultSet.next()) {
+                int id = resultSet.getInt("id");
+                String name = resultSet.getString("name");
+                String email = resultSet.getString("email");
+                System.out.println("ID: " + id + ", Name: " + name + ", Email: " + email);
+            }
+
+            // **Update Operation**
+            String updateSQL = "UPDATE your_table SET email = ? WHERE id = ?";
+            PreparedStatement updateStatement = connection.prepareStatement(updateSQL);
+            updateStatement.setString(1, "updated_email@example.com");
+            updateStatement.setInt(2, 1); // Replace with the ID you want to update
+            updateStatement.executeUpdate();
+            System.out.println("Record Updated!");
+
+            // **Delete Operation**
+            String deleteSQL = "DELETE FROM your_table WHERE id = ?";
+            PreparedStatement deleteStatement = connection.prepareStatement(deleteSQL);
+            deleteStatement.setInt(1, 2); // Replace with the ID you want to delete
+            deleteStatement.executeUpdate();
+            System.out.println("Record Deleted!");
+
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+        } catch (SQLException e) {
+            e.printStackTrace();
+        } finally {
+            // Close connection
+            if (connection != null) {
+                try {
+                    connection.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
 
 
 
