--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -202,12 +202,27 @@ public class CRUDExample {
 }
 ```
 
+# Threads
 
+Threads are used in programming to accelerate the `processing time` by executing tasks in parallel. Here are some of the `threads` common methods.
 
-
-
-
-
+| Method                        | Description                                          |
+|-------------------------------|------------------------------------------------------|
+|                               |                                                      |
+| Thread.sleep(long 456)        | Pauses the thread for x ms                           |
+| Thread.currentThread()        | Returns a reference to the execution thread object   |
+|                               |                                                      |
+| Life Cycle Methods            |                                                      |
+|                               |                                                      |
+| start()                       | Starts a thread                                      |
+| run()                         | Runs a thread                                        |
+|                               |                                                      |
+| Management Methods            |                                                      |
+|                               |                                                      |
+| getId()                       | Gets a thread id                                     |
+| getName()                     | Gets a thread name                                   |
+| getState()                    | Gets a thread state                                  |
+| join()                        | Waits for background task to finish to continue      |
 
 
 
