--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -95,7 +95,7 @@ public class MatrixExample {
 
 # Strings
 
-`Strings` are objects of the `String class`, which provides functionality for working with text data. They are immutable, which means that once created they cannot be changed. To change them we must use the string manipulation classes `String Buffer` and `String Builder`. 
+`Strings` are objects of the `String class`, which provides functionality for working with text data. They are immutable, meaning they cannot be changed once created. To change them we must use the string manipulation classes `String Buffer` and `String Builder`. 
 
 `String Builder` is faster than `String Builder` however it's less `thread-safe` (the ability of a program to handle multiple threads). They use methods such as `append`, `insert`, `delete`, `reverse`, etc.
 
@@ -107,7 +107,7 @@ The heap is the general memory space for all objects in Java, including `String 
 
 # Reading "txt" and "csv" files.
 
-`BufferedReader`: This is a common approach for both TXT and CSV files. It reads the file line by line efficiently. Here's a basic example:
+`BufferedReader`: This approach is common for TXT and CSV files. It reads the file line by line efficiently. Here's a basic example:
 
 ```java
 
@@ -206,6 +206,14 @@ public class CRUDExample {
 
 Threads are used in programming to accelerate the `processing time` by executing tasks in parallel. Here are some of the `threads` common methods.
 
+States:
+1. new
+2. runnable
+3. terminated
+4. waiting
+5. timed waiting
+6. blocked
+
 | Method                        | Description                                          |
 |-------------------------------|------------------------------------------------------|
 | Thread.sleep(long 456)        | Pauses the thread for x ms                           |
@@ -218,7 +226,4 @@ Threads are used in programming to accelerate the `processing time` by executing
 | getName()                     | Gets a thread name                                   |
 | getState()                    | Gets a thread state                                  |
 | join()                        | Waits for background task to finish to continue      |
-
-
-
 
