--- a/src/11-POO_4.md
+++ b/src/11-POO_4.md
@@ -227,3 +227,42 @@ States:
 | getState()                    | Gets a thread state                                  |
 | join()                        | Waits for background task to finish to continue      |
 
+
+Here's a basic thread example:
+
+```java
+public class MyThread extends Thread {
+  @Override
+  public void run() {
+    for (int i = 0; i < 5; i++) {
+      System.out.println("Thread extending Thread: " + i);
+      try {
+        Thread.sleep(1000); // Simulate some work
+      } catch (InterruptedException e) {
+        e.printStackTrace();
+      }
+    }
+  }
+
+  public static void main(String[] args) {
+    MyThread thread = new MyThread();
+    thread.start(); // Start the thread execution
+    
+    for (int i = 0; i < 5; i++) {
+      System.out.println("Main Thread: " + i);
+      try {
+        Thread.sleep(1000);
+      } catch (InterruptedException e) {
+        e.printStackTrace();
+      }
+    }
+  }
+}
+```
+
+# Conclussion
+
+Now that you understand POO you have a structured approach to software development, promoting code reusability, maintainability, and scalability. These qualities are essential for building large and complex applications.
+
+
+
